<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <TextView
        android:id="@+id/instructionsLabel"
        android:layout_width="267dp"
        android:layout_height="36dp"
        android:layout_marginTop="372dp"
        android:text="@string/descriptionLabel"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textColorLink="#FFFFFF"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/songFourButton"
        android:layout_width="172dp"
        android:layout_height="52dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="108dp"
        android:text="@string/buttonFourLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/songTwoButton"
        android:layout_width="172dp"
        android:layout_height="52dp"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="108dp"
        android:text="@string/buttonTwoLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/SongThreeButton"
        android:layout_width="172dp"
        android:layout_height="52dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="336dp"
        android:text="@string/buttonThreeLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/songOneButton"
        android:layout_width="172dp"
        android:layout_height="52dp"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="336dp"
        android:text="@string/buttonOneLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/songOneIcon"
        android:layout_width="118dp"
        android:layout_height="118dp"
        android:layout_marginStart="108dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/songOneButton"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/sample" />

    <ImageView
        android:id="@+id/songThreeIcon"
        android:layout_width="118dp"
        android:layout_height="118dp"
        android:layout_marginStart="372dp"
        android:layout_marginBottom="240dp"
        app:layout_constraintBottom_toTopOf="@+id/songTwoButton"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/sample" />

    <ImageView
        android:id="@+id/songFourIcon"
        android:layout_width="118dp"
        android:layout_height="118dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/songFourButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/sample" />

    <ImageView
        android:id="@+id/songTwoIcon"
        android:layout_width="118dp"
        android:layout_height="118dp"
        android:layout_marginEnd="380dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/songFourButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/sample" />

    <ImageView
        android:id="@+id/musiWriteLogo"
        android:layout_width="292dp"
        android:layout_height="201dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/instructionsLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/sample"
        android:contentDescription="TODO" />

</androidx.constraintlayout.widget.ConstraintLayout>